mds: obsolete MDSMap option configs

These configs were used for initialization but it is more appropriate to
require setting these file system attributes via `ceph fs set`. This is similar
to what was already done with max_mds. There are new variables added for `fs
set` where missing.

Signed-off-by: Patrick Donnelly <pdonnell@redhat.com>
(cherry picked from commit 67ca6cd229a595d54ccea18b5452f2574ede9657)
Fixes: http://tracker.ceph.com/issues/37540

Conflicts:
	PendingReleaseNotes
	qa/tasks/cephfs/filesystem.py
	qa/tasks/cephfs/test_strays.py
	src/common/legacy_config_opts.h
	src/mds/FSMap.cc
	src/mds/Locker.cc
	src/mds/MDBalancer.cc
	src/mds/MDSMap.h
	src/mds/Server.cc